--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -19,7 +19,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-
+      
+      - name: Install Build Tools
+        run: python -m pip install wheel setuptools
+        
       - name: Build wheels
         run: python setup.py bdist_wheel
 
