--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,11 @@ name: build-wheel
 
 on:
   push:
-    branches: [ "build" ]
+    branches: [ "publish" ]
+
+
+
+# copied from build_wheel.yml
 
 jobs:
   build_wheels:
@@ -18,11 +22,11 @@ jobs:
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
-      
+          python-version: '3.8'
+
       - name: Install Build Tools
         run: python -m pip install wheel setuptools
-        
+
       - name: Build wheels
         run: python setup.py bdist_wheel
 
